benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe015_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe015_power.opt.yml/safe015_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe015_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c
Compilation started
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c: In function ‘P0’:
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c:584:19: error: ‘FALSE’ undeclared (first use in this function)
  584 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c:584:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c: In function ‘P2’:
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c:635:19: error: ‘FALSE’ undeclared (first use in this function)
  635 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c: In function ‘main’:
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c:711:19: error: ‘FALSE’ undeclared (first use in this function)
  711 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_k2430l9f/tmp/tmpvr80gumv.c:722:19: error: ‘TRUE’ undeclared (first use in this function)
  722 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
